// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModuleLibrary Not Read-only matches snapshot 1`] = `
<div>
  <ModuleLibraryOpen
    addModule={[MockFunction]}
    api={
      Object {
        "getModules": [MockFunction] {
          "calls": Array [
            Array [],
          ],
        },
        "setWfLibraryCollapse": [MockFunction],
      }
    }
    dropModule={[MockFunction]}
    isReadOnly={false}
    libraryOpen={true}
    moduleAdded={[Function]}
    modules={Array []}
    openCategory="Add data"
    setOpenCategory={[Function]}
    toggleLibrary={[Function]}
    workflow={
      Object {
        "id": 15,
        "name": "What a workflow!",
      }
    }
  />
</div>
`;

exports[`ModuleLibrary Read-only matches snapshot 1`] = `
<ModuleLibraryClosed
  addModule={[MockFunction]}
  api={
    Object {
      "getModules": [MockFunction] {
        "calls": Array [
          Array [],
          Array [],
        ],
      },
      "setWfLibraryCollapse": [MockFunction],
    }
  }
  dropModule={[MockFunction]}
  isReadOnly={true}
  libraryOpen={false}
  moduleAdded={[Function]}
  modules={Array []}
  openCategory="Add data"
  openLibrary={[Function]}
  setOpenCategory={[Function]}
/>
`;
